syntax = "proto3";

package resin.grpc;

import "google/protobuf/timestamp.proto";

message ReadRequest {
	string Stream = 1;
	uint64 position = 2;
}

message IsgEvent {
  string Id = 1;
  string Type = 3;
  string Source = 4;
  uint64 position = 5;
  google.protobuf.Timestamp When = 6;
  string Payload = 7;
}

service Reader {
  rpc Read (ReadRequest) returns (stream IsgEvent);
  rpc Subscribe (ReadRequest) returns (stream IsgEvent);
} 

